--- a/style.css
+++ b/style.css
@@ -11,7 +11,12 @@ font-family: 'Gilroy-Heavy', sans-serif;
 font-family: 'Gilroy-Light', sans-serif;
 font-family: 'Gilroy-Medium', sans-serif;
 font-family: 'Gilroy-Regular', sans-serif;
+margin: auto;
+    max-width: 1140px;
+    width: 100%;
 }
+
+
 header {
     width: 100%;
     height: 116px;
@@ -21,7 +26,10 @@ header {
 }
 
 .chapter_1 {
-    width: 95%;
+    margin:auto;
+    max-width: 1140px;
+    flex-wrap: wrap;
+    width: 100%;
     font-size: 18px;
     display: flex;
     justify-content: space-between;
@@ -38,8 +46,12 @@ header {
 .chapter_1 a {
     font-size: 18px;
 }
-
+.gr-gr2 {
+    max-width: 1140px;
+    width: 100%;
+}
 .green-1 {
+    flex-wrap: wrap;
     display: flex;
 }
 
@@ -51,7 +63,9 @@ header {
     
     
 }
-
+.text-1 {
+    width: 50%;
+}
 
 
 .text-1 h1 {
@@ -70,6 +84,7 @@ line-height: normal;
     font-size: 20px;
 }
 .green-2{
+    flex-wrap: wrap;
     display: flex;
 }
 
@@ -78,6 +93,7 @@ line-height: normal;
     margin-left: 10%;
 }
 .Mr-dj {
+    
     height: 370px;
     width: 60%;
     background-color: #000;
@@ -140,7 +156,8 @@ line-height: 140.625%;
     width: 100%;
 }
 .mather_block {
-    padding: 0 135px;
+    flex-wrap: wrap;
+    
     display: flex;
     justify-content: space-between;
 }
@@ -185,8 +202,12 @@ line-height: 140.625%;
     font-size: 18px;
 }
 .header_btn{
+    margin-right: 66px;
     border: 1px solid orange;
+    width: 150px;
+    height: 43.5px;
 }
+
 
 .push {
     padding-top: 3%;
@@ -227,10 +248,12 @@ line-height: 140.625%;
     align-items: center;
     width: 80%;
     margin-left: 13%;
+    flex-wrap: wrap;
 
 }
 
 .best-try h1 {
+        margin-top: 68px;
     font-size: 32px;
     display: flex;
     justify-content: center;
@@ -238,7 +261,9 @@ line-height: 140.625%;
 }
 
 .best-try p {
-    margin-top: 4%;
+
+    margin-top: 23px;
+    margin-bottom: 91px;
     font-size: 18px;
     display: flex;
     justify-content: center;
@@ -275,8 +300,8 @@ line-height: 140.625%;
 }
 
 .white1_2 {
-    
-    width:;
+    flex-wrap: wrap;
+    width: 100%;
     margin-top: 3%;
     justify-content: center;
     display: flex;
@@ -333,7 +358,7 @@ gap: 31px;
     justify-content: space-around;
     align-items: center;
     padding: 0 320px;
-    margin-top: 5%;
+    margin-top: 106px;
 }
 .a{
     cursor: pointer;
@@ -345,13 +370,13 @@ gap: 31px;
     display: flex;
    
     justify-content: space-around;
-    padding: 55px 610px;
+    padding: 55px 590px;
 }
 .x2010 p{
     padding-right: 30px;
 }
 .last2010 {
-    
+    margin-bottom: 35px;
     display: flex;
     justify-content: center;
 }
@@ -369,7 +394,7 @@ gap: 31px;
 }
 
 .HowWe-1 {
-    width: 441px;
+    width: 400px;
 }
 .Gift-box p {
     display: flex;
@@ -384,6 +409,14 @@ font-style: normal;
 font-weight: 400;
 line-height: normal;
     
+}
+.Gift-box {
+    margin-top: 96px;
+    
+}
+.Gift-box2 {
+    margin-top: 23px;
+    margin-bottom: 91px;
 }
 .Gift-box2 p {
     display: flex;
@@ -488,6 +521,7 @@ line-height: 135.938%;
     background: #FAFAFA;
 }
 .esan {
+    flex-wrap: wrap;
     margin-top: 5%;
     display: flex;
     justify-content: center;
@@ -514,13 +548,16 @@ line-height: 135.938%;
     color: #F7941E;
 }
 .block-white{
+    
     background: #FFF;
 box-shadow: 10px 10px 15px 0px rgba(0, 0, 0, 0.05);
-    width: 63%;
+    width: 570px;
+    height: 290px;
 }
-.block-white33{
-    width: 
-    height:
+.block-white33 {
+    width: 570px;
+    height: 290px;
+    
 }
 .image-man-woman > img{
     width: 100%;
@@ -537,3 +574,40 @@ box-shadow: 10px 10px 15px 0px rgba(0, 0, 0, 0.05);
 .text-header h1 {
     font-size: 32px;
 }
+@media screen and (max-width: 800px) {
+    .green-1, .green-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    }
+    
+    .pink-2 img {
+    width: 100%;
+    }
+    }
+    @media only screen and (max-width: 480px) {
+        .tap {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+        }
+        
+        .header_btn {
+          font-size: 14px;
+          margin-top: 10px;
+          width: 100%;
+        }
+      }
+      @media only screen and (max-width: 480px) {
+        .img-last {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+        }
+        
+        .img-last img {
+          width: 80%;
+          margin: 10px 0;
+        }
+      }
